k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: AETHER-SCORE
  labels:
    name: AETHER-SCORE
    app: AETHER-SCORE
